MicroserviceMatrixDSL.AntrBasedTranspiler/Generated/microservice_description_languageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\users\michal\documents\visual studio 2013\Projects\MSDL\MSDL\microservice_description_language.g4 by ANTLR 4.3

// Unreachable code detected

using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Tree;

#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace MicroserviceMatrixDSL.AntlrBasedTranspiler.Generated {
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class microservice_description_languageParser : Parser {
	public const int
		COMMUNICATION=1, DEFAULT=2, CLASS=3, MESSAGE=4, IS=5, SENDS=6, LIKE=7, 
		AND=8, WITH=9, NAMESPACE=10, MICROSERVICE=11, USING=12, RECEIVES=13, RESPONDS=14, 
		WS=15, LETTER=16, ID=17, ID_=18, INT=19, COMMENT=20;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'communication'", "'default'", "'class'", "'message'", "'is'", 
		"'sends'", "'like'", "'and'", "'with'", "'namespace'", "'microservice'", 
		"'using'", "'receives'", "'responds'", "WS", "LETTER", "ID", "ID_", "INT", 
		"COMMENT"
	};
	public const int
		RULE_microservice_description_language = 0, RULE_statement = 1, RULE_default_message_namespace_declaration = 2, 
		RULE_default_microservice_namespace_declaration = 3, RULE_default_communication_declaration = 4, 
		RULE_microservice_declaration = 5, RULE_microservice_description = 6, 
		RULE_received_message_declaration = 7, RULE_sended_message_declaration = 8, 
		RULE_mixin_declaration = 9, RULE_used_communication = 10, RULE_message_declaration = 11, 
		RULE_message_description = 12;
	public static readonly string[] ruleNames = {
		"microservice_description_language", "statement", "default_message_namespace_declaration", 
		"default_microservice_namespace_declaration", "default_communication_declaration", 
		"microservice_declaration", "microservice_description", "received_message_declaration", 
		"sended_message_declaration", "mixin_declaration", "used_communication", 
		"message_declaration", "message_description"
	};

	public override string GrammarFileName { get { return "microservice_description_language.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public microservice_description_languageParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Microservice_description_languageContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> COMMENT() { return GetTokens(microservice_description_languageParser.COMMENT); }
		public ITerminalNode COMMENT(int i) {
			return GetToken(microservice_description_languageParser.COMMENT, i);
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public IReadOnlyList<StatementContext> statement() {
			return GetRuleContexts<StatementContext>();
		}
		public Microservice_description_languageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_microservice_description_language; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterMicroservice_description_language(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitMicroservice_description_language(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMicroservice_description_language(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Microservice_description_languageContext microservice_description_language() {
		Microservice_description_languageContext _localctx = new Microservice_description_languageContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_microservice_description_language);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 28;
				switch (_input.La(1)) {
				case DEFAULT:
				case MESSAGE:
				case MICROSERVICE:
					{
					State = 26; statement();
					}
					break;
				case COMMENT:
					{
					State = 27; Match(COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 30;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEFAULT) | (1L << MESSAGE) | (1L << MICROSERVICE) | (1L << COMMENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Default_communication_declarationContext default_communication_declaration() {
			return GetRuleContext<Default_communication_declarationContext>(0);
		}
		public Default_message_namespace_declarationContext default_message_namespace_declaration() {
			return GetRuleContext<Default_message_namespace_declarationContext>(0);
		}
		public Message_declarationContext message_declaration() {
			return GetRuleContext<Message_declarationContext>(0);
		}
		public Microservice_declarationContext microservice_declaration() {
			return GetRuleContext<Microservice_declarationContext>(0);
		}
		public Default_microservice_namespace_declarationContext default_microservice_namespace_declaration() {
			return GetRuleContext<Default_microservice_namespace_declarationContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 37;
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 32; default_message_namespace_declaration();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 33; default_microservice_namespace_declaration();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 34; default_communication_declaration();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 35; message_declaration();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 36; microservice_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Default_message_namespace_declarationContext : ParserRuleContext {
		public IToken default_message_namespace;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public IReadOnlyList<ITerminalNode> IS() { return GetTokens(microservice_description_languageParser.IS); }
		public ITerminalNode IS(int i) {
			return GetToken(microservice_description_languageParser.IS, i);
		}
		public ITerminalNode MESSAGE() { return GetToken(microservice_description_languageParser.MESSAGE, 0); }
		public ITerminalNode NAMESPACE() { return GetToken(microservice_description_languageParser.NAMESPACE, 0); }
		public ITerminalNode DEFAULT() { return GetToken(microservice_description_languageParser.DEFAULT, 0); }
		public Default_message_namespace_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_default_message_namespace_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterDefault_message_namespace_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitDefault_message_namespace_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefault_message_namespace_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Default_message_namespace_declarationContext default_message_namespace_declaration() {
		Default_message_namespace_declarationContext _localctx = new Default_message_namespace_declarationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_default_message_namespace_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39; Match(DEFAULT);
			State = 40; Match(MESSAGE);
			State = 41; Match(NAMESPACE);
			State = 45;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IS) {
				{
				{
				State = 42; Match(IS);
				}
				}
				State = 47;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			{
			State = 48; _localctx.default_message_namespace = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Default_microservice_namespace_declarationContext : ParserRuleContext {
		public IToken default_microservice_namespace;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public IReadOnlyList<ITerminalNode> IS() { return GetTokens(microservice_description_languageParser.IS); }
		public ITerminalNode IS(int i) {
			return GetToken(microservice_description_languageParser.IS, i);
		}
		public IReadOnlyList<ITerminalNode> MICROSERVICE() { return GetTokens(microservice_description_languageParser.MICROSERVICE); }
		public ITerminalNode MICROSERVICE(int i) {
			return GetToken(microservice_description_languageParser.MICROSERVICE, i);
		}
		public ITerminalNode NAMESPACE() { return GetToken(microservice_description_languageParser.NAMESPACE, 0); }
		public ITerminalNode DEFAULT() { return GetToken(microservice_description_languageParser.DEFAULT, 0); }
		public Default_microservice_namespace_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_default_microservice_namespace_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterDefault_microservice_namespace_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitDefault_microservice_namespace_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefault_microservice_namespace_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Default_microservice_namespace_declarationContext default_microservice_namespace_declaration() {
		Default_microservice_namespace_declarationContext _localctx = new Default_microservice_namespace_declarationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_default_microservice_namespace_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(DEFAULT);
			State = 54;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==MICROSERVICE) {
				{
				{
				State = 51; Match(MICROSERVICE);
				}
				}
				State = 56;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 57; Match(NAMESPACE);
			State = 61;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IS) {
				{
				{
				State = 58; Match(IS);
				}
				}
				State = 63;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			{
			State = 64; _localctx.default_microservice_namespace = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Default_communication_declarationContext : ParserRuleContext {
		public IToken communication_name;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public IReadOnlyList<ITerminalNode> IS() { return GetTokens(microservice_description_languageParser.IS); }
		public ITerminalNode IS(int i) {
			return GetToken(microservice_description_languageParser.IS, i);
		}
		public ITerminalNode DEFAULT() { return GetToken(microservice_description_languageParser.DEFAULT, 0); }
		public ITerminalNode COMMUNICATION() { return GetToken(microservice_description_languageParser.COMMUNICATION, 0); }
		public Default_communication_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_default_communication_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterDefault_communication_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitDefault_communication_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefault_communication_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Default_communication_declarationContext default_communication_declaration() {
		Default_communication_declarationContext _localctx = new Default_communication_declarationContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_default_communication_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; Match(DEFAULT);
			State = 67; Match(COMMUNICATION);
			State = 71;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==IS) {
				{
				{
				State = 68; Match(IS);
				}
				}
				State = 73;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			{
			State = 74; _localctx.communication_name = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Microservice_declarationContext : ParserRuleContext {
		public IToken microservice_name;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public ITerminalNode MICROSERVICE() { return GetToken(microservice_description_languageParser.MICROSERVICE, 0); }
		public IReadOnlyList<Microservice_descriptionContext> microservice_description() {
			return GetRuleContexts<Microservice_descriptionContext>();
		}
		public Microservice_descriptionContext microservice_description(int i) {
			return GetRuleContext<Microservice_descriptionContext>(i);
		}
		public Microservice_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_microservice_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterMicroservice_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitMicroservice_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMicroservice_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Microservice_declarationContext microservice_declaration() {
		Microservice_declarationContext _localctx = new Microservice_declarationContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_microservice_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(MICROSERVICE);
			{
			State = 77; _localctx.microservice_name = Match(ID);
			}
			State = 81;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SENDS) | (1L << LIKE) | (1L << USING) | (1L << RECEIVES))) != 0)) {
				{
				{
				State = 78; microservice_description();
				}
				}
				State = 83;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Microservice_descriptionContext : ParserRuleContext {
		public Used_communicationContext used_communication() {
			return GetRuleContext<Used_communicationContext>(0);
		}
		public Received_message_declarationContext received_message_declaration() {
			return GetRuleContext<Received_message_declarationContext>(0);
		}
		public Sended_message_declarationContext sended_message_declaration() {
			return GetRuleContext<Sended_message_declarationContext>(0);
		}
		public Mixin_declarationContext mixin_declaration() {
			return GetRuleContext<Mixin_declarationContext>(0);
		}
		public Microservice_descriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_microservice_description; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterMicroservice_description(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitMicroservice_description(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMicroservice_description(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Microservice_descriptionContext microservice_description() {
		Microservice_descriptionContext _localctx = new Microservice_descriptionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_microservice_description);
		try {
			State = 88;
			switch (_input.La(1)) {
			case RECEIVES:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; received_message_declaration();
				}
				break;
			case SENDS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85; sended_message_declaration();
				}
				break;
			case LIKE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 86; mixin_declaration();
				}
				break;
			case USING:
				EnterOuterAlt(_localctx, 4);
				{
				State = 87; used_communication();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Received_message_declarationContext : ParserRuleContext {
		public IToken receives;
		public IToken responds;
		public ITerminalNode RECEIVES() { return GetToken(microservice_description_languageParser.RECEIVES, 0); }
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(microservice_description_languageParser.ID); }
		public ITerminalNode RESPONDS() { return GetToken(microservice_description_languageParser.RESPONDS, 0); }
		public ITerminalNode AND(int i) {
			return GetToken(microservice_description_languageParser.AND, i);
		}
		public IReadOnlyList<ITerminalNode> WITH() { return GetTokens(microservice_description_languageParser.WITH); }
		public ITerminalNode WITH(int i) {
			return GetToken(microservice_description_languageParser.WITH, i);
		}
		public IReadOnlyList<ITerminalNode> AND() { return GetTokens(microservice_description_languageParser.AND); }
		public ITerminalNode ID(int i) {
			return GetToken(microservice_description_languageParser.ID, i);
		}
		public Received_message_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_received_message_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterReceived_message_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitReceived_message_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReceived_message_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Received_message_declarationContext received_message_declaration() {
		Received_message_declarationContext _localctx = new Received_message_declarationContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_received_message_declaration);
		int _la;
		try {
			State = 108;
			switch ( Interpreter.AdaptivePredict(_input,11,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 90; Match(RECEIVES);
				{
				State = 91; _localctx.receives = Match(ID);
				}
				}
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 92; Match(RECEIVES);
				{
				State = 93; _localctx.receives = Match(ID);
				}
				State = 97;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==AND) {
					{
					{
					State = 94; Match(AND);
					}
					}
					State = 99;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 100; Match(RESPONDS);
				State = 104;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==WITH) {
					{
					{
					State = 101; Match(WITH);
					}
					}
					State = 106;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				{
				State = 107; _localctx.responds = Match(ID);
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Sended_message_declarationContext : ParserRuleContext {
		public IToken sends;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public ITerminalNode SENDS() { return GetToken(microservice_description_languageParser.SENDS, 0); }
		public Sended_message_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sended_message_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterSended_message_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitSended_message_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSended_message_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Sended_message_declarationContext sended_message_declaration() {
		Sended_message_declarationContext _localctx = new Sended_message_declarationContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_sended_message_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(SENDS);
			{
			State = 111; _localctx.sends = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Mixin_declarationContext : ParserRuleContext {
		public IToken like_microservice;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public ITerminalNode LIKE() { return GetToken(microservice_description_languageParser.LIKE, 0); }
		public Mixin_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mixin_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterMixin_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitMixin_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMixin_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Mixin_declarationContext mixin_declaration() {
		Mixin_declarationContext _localctx = new Mixin_declarationContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_mixin_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(LIKE);
			{
			State = 114; _localctx.like_microservice = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Used_communicationContext : ParserRuleContext {
		public IToken communication_name;
		public ITerminalNode ID() { return GetToken(microservice_description_languageParser.ID, 0); }
		public ITerminalNode COMMUNICATION(int i) {
			return GetToken(microservice_description_languageParser.COMMUNICATION, i);
		}
		public ITerminalNode USING() { return GetToken(microservice_description_languageParser.USING, 0); }
		public IReadOnlyList<ITerminalNode> COMMUNICATION() { return GetTokens(microservice_description_languageParser.COMMUNICATION); }
		public Used_communicationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_used_communication; } }
		public override void EnterRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.EnterUsed_communication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Imicroservice_description_languageListener typedListener = listener as Imicroservice_description_languageListener;
			if (typedListener != null) typedListener.ExitUsed_communication(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Imicroservice_description_languageVisitor<TResult> typedVisitor = visitor as Imicroservice_description_languageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsed_communication(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Used_communicationContext used_communication() {
		Used_communicationContext _localctx = new Used_communicationContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_used_communication);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(USING);
			State = 120;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMUNICATION) {
				{
				{
				State = 117; Match(COMMUNICATION);
				}
				}
				State = 122;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			{
			State = 123; _localctx.communication_name = Match(ID);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
